// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <ds-field data-clickdelegatefor="checkbox-in-color-context">
    <input
      id="checkbox-in-color-context"
      type="checkbox"
      checked
      aria-describedby="mmexwnuqdi94"
    >
    <label
      data-weight="regular"
      for="checkbox-in-color-context"
    >
      Checkbox label
    </label>
    <div
      data-field="description"
      id="mmexwnuqdi94"
    >
      Description
    </div>
  </ds-field>
</div>
`;

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="checkbox-preview">
  <input
    id="checkbox-preview"
    type="checkbox"
    value="value"
    aria-describedby="mmexwnuqdi95"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="mmexwnuqdi95"
  >
    Description
  </div>
</ds-field>
`;

exports[`One Option 1`] = `
<fieldset>
  <legend data-weight="medium">
    Bekreft at du er over 18 år
  </legend>
  <p data-variant="default">
    For at vi skal kunne sende deg opplysningen du ber om, må du bekrefte at du er myndig.
  </p>
  <ds-field>
    <input
      id="components-checkbox--one-option"
      type="checkbox"
      value="samtykke"
    >
    <label data-weight="regular">
      Jeg bekrefter at jeg er over 18 år
    </label>
  </ds-field>
</fieldset>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="checkbox-preview">
  <input
    id="checkbox-preview"
    type="checkbox"
    value="value"
    aria-describedby="mmexwnuqdi91"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="mmexwnuqdi91"
  >
    Description
  </div>
</ds-field>
`;
